fixed small spacing issue on p in featured listing desc

--- a/one-commercial/src/components/home/featuredListing/featuredListing.sass
+++ b/one-commercial/src/components/home/featuredListing/featuredListing.sass
@@ -74,8 +74,9 @@
           align-items: center
           margin-top: 10px
         p 
+
           font-size: 0.85em !important
-          // margin-bottom: 30px !important
+          margin-bottom: 30px !important
           @include edgesnap 
             margin-bottom: 1.5vw !important
             font-size: 0.8em !important
